Updated Evmos image asset and svg path.

--- a/data/navbar/supportedNetworks.yaml
+++ b/data/navbar/supportedNetworks.yaml
@@ -89,9 +89,9 @@
         banner:
         published: true
       - 
-        title: EVMOS
+        title: Evmos
         link: /docs/networks/evmos/
-        icon: "//covalenthq.com/static/images/blockchains/svgs/iotex.svg"
+        icon: "//covalenthq.com/static/images/blockchains/svgs/evmos.svg"
         banner:
         published: true
       - 
