chore: December changelog updated.

--- a/data/navbar/developer.yaml
+++ b/data/navbar/developer.yaml
@@ -104,6 +104,14 @@
         link: /docs/changelog/2021/october/
         published: true
       - 
+        title: November 2021
+        link: /docs/changelog/2021/november/
+        published: true
+      - 
+        title: December 2021
+        link: /docs/changelog/2021/december/
+        published: true
+      - 
         title: Changelog guide
         link: /docs/changelog/guide
         published: false
@@ -125,6 +133,11 @@
       - 
         title: GetBlock
         link: /docs/service-providers/getblock/
+        published: true
+        subsection:
+      - 
+        title: Moralis
+        link: /docs/service-providers/moralis/
         published: true
         subsection:
 
