--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -29,7 +29,7 @@
       published: false
       subsection:
     -
-      title: Bridge your CQT
+      title: Bridge
       link: /docs/network/covalent-query-token/bridge
       published: true
       subsection:
