st. homepage + audits

--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -25,8 +25,8 @@
   subsection:
     -
       title: Staking
-      link: /docs/network/covalent-query-token/staking-covalent-network
-      published: false
+      link: /docs/network/covalent-query-token/covalent-network-staking
+      published: true
       subsection:
     -
       title: Bridge
@@ -64,19 +64,19 @@
       published: false
       subsection:
     -
-      title: Source Code
-      link: /docs/network/network-resources/source-code
-      published: false
+      title: Security & Audits
+      link: /docs/network/network-resources/security-and-audits
+      published: true
       subsection:
     -
       title: Operator FAQ
       link: /docs/network/network-resources/operator-faq
-      published: false
+      published: true
       subsection:
     -
       title: Delegator FAQ
       link: /docs/network/network-resources/delegator-faq
-      published: false
+      published: true
       subsection:
     -
       title: Glossary
