--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -29,6 +29,11 @@
       published: true
       subsection:
     -
+            title: How to Stake CQT
+            link: /docs/network/covalent-query-token/covalent-network-staking/how-to-stake
+            published: true
+            subsection:
+    -
       title: Bridge
       link: /docs/network/covalent-query-token/bridge
       published: true
