--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -31,7 +31,7 @@
     -
             title: How to Stake CQT
             link: /docs/network/covalent-query-token/covalent-network-staking/how-to-stake
-            published: true
+            published: false
             subsection:
     -
       title: Bridge
