updated operator banner

--- a/data/networkValidators.yaml
+++ b/data/networkValidators.yaml
@@ -14,8 +14,8 @@
     Name: Aquanow
     img: "//covalenthq.com/static/images/validators/Aquanow.png"
   -
-    Name: 1kx
-    img: "//covalenthq.com/static/images/validators/1kx.png"
+    Name: UofCalgary
+    img: "//covalenthq.com/static/images/validators/UofCalgary.png"
   -
     Name: PopsTeam
     img: "//covalenthq.com/static/images/validators/Aquanow-1.png"
@@ -34,4 +34,3 @@
   -
     Name: Bware Labs
     img: "//covalenthq.com/static/images/validators/BwareLabs.png"
-
