--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -13,6 +13,11 @@
       link: /docs/network/network-operators/block-specimen-producer
       published: true
       subsection:
+        -
+          title: Block Specimen Producer Onboarding
+          link: /docs/network/network-operators/block-specimen-producer/onboarding
+          published: true
+          subsection:
     -
       title: Network Rewards
       link: /docs/network/network-operators/network-rewards
