--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -14,7 +14,7 @@
       published: true
       subsection:
         -
-          title: Block Specimen Producer Onboarding
+          title: Get Started
           link: /docs/network/network-operators/block-specimen-producer/onboarding
           published: true
           subsection:
