--- a/data/navbar/network.yaml
+++ b/data/navbar/network.yaml
@@ -14,7 +14,7 @@
       published: true
       subsection:
         -
-          title: Get Started
+          title: Onboarding
           link: /docs/network/network-operators/block-specimen-producer/bsp-onboarding
           published: true
           subsection:
